# ai-file-organizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-gpu.txt  requirements.txt
scripts/: download_models.py
src/: __init__.py  cli.py  clustering.py  config.py  filetype.py  hashing.py  models.py  organizer.py  scanner.py  undo_manager.py
src/features/: __init__.py  audio_features.py  cache.py  document_features.py  image_features.py  video_features.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  test_clustering.py  test_hashing.py  test_scanner.py
